--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="overlay">
             <h2>Radhe Radhe</h2>
             <h4>I am going Home.</h4>
-            <h4>09 March 2025</h4>
+            <div id="end-date"><h4>09 March 2025</h4></div>
             <div class="col">
                 <div>
                     <input type="text" readonly value="0">
